// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`samplesReducer Adds a new sample correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
  "qwe234": Object {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample 2",
    "projectUuid": null,
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Delete samples correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Deletes sample metadata correctly 1`] = `
Object {
  "[object Object]": Object {
    "metadata": Object {
      "metadata-test": "old-value",
    },
  },
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Inserts a new sample correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Inserts sample metadata correctly 1`] = `
Object {
  "[object Object]": Object {
    "metadata": Object {},
  },
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {
      "metadata-test": "value",
    },
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Loads samples correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "ids": Array [
    "asd123",
    "qwe234",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
  "qwe234": Object {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample 2",
    "projectUuid": null,
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Sets up saved state correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Sets up saving state correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": "Saving",
  },
}
`;

exports[`samplesReducer Stores error state correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": "Error message",
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Updates a sample correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "updated name",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Updates sample files correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [
      "features.tsv",
    ],
    "files": Object {
      "features.tsv": Object {
        "error": false,
        "lastModified": "newLastModified",
        "mime": "",
        "name": "features.tsv",
        "objectKey": "",
        "path": "",
        "size": 0,
        "success": false,
        "upload": Object {
          "amplifyPromise": null,
          "status": null,
        },
      },
    },
    "lastModified": "newLastModified",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Updates sample files correctly 2`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [
      "features.tsv",
    ],
    "files": Object {
      "features.tsv": Object {
        "error": false,
        "lastModified": "newLastModified",
        "mime": "",
        "name": "features.tsv",
        "objectKey": "",
        "path": "",
        "size": 0,
        "success": false,
        "upload": Object {
          "amplifyPromise": null,
          "status": null,
        },
      },
    },
    "lastModified": "newLastModified",
    "metadata": Object {},
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Updates sample metadata correctly 1`] = `
Object {
  "[object Object]": Object {
    "metadata": Object {
      "metadata-test": "old-value",
    },
  },
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {
      "metadata-test": "new-value",
    },
    "name": "test sample",
    "projectUuid": null,
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;
